--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -60,7 +60,7 @@
         android:padding="10dp"
         android:background="#00000000"
         android:textSize="10sp"
-        android:textColor="@android:color/background_light"
+        android:textColor="@android:color/black"
         android:gravity="top|center_vertical|center_horizontal"
         android:layout_above="@+id/btLoginCreateAccount"
         android:layout_alignLeft="@+id/btLoginCreateAccount"
@@ -70,18 +70,31 @@
         android:textColorLink="?attr/colorControlNormal"
         android:textStyle="normal|bold" />
 
-    <TextView
-        android:text="SaveMe !"
-        android:layout_width="wrap_content"
+    <EditText
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvLogo"
-        android:textSize="50sp"
-        android:fontFamily="cursive"
-        android:textColor="@color/loginButton"
-        android:textAlignment="center"
-        android:paddingTop="40dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/etLoginPassword"
+        android:hint="@string/stLoginPasswordHint"
+        android:drawableLeft="@drawable/password"
+        android:drawablePadding="40dp"
+        android:layout_gravity="center_horizontal"
+        android:padding="10dp"
+        android:fontFamily="casual"
+        android:textSize="20sp"
+        android:textColor="@android:color/background_dark"
+        android:textColorHint="@android:color/background_dark"
+        android:background="@color/editTextLoginBackground"
+        android:textColorLink="?attr/actionMenuTextColor"
+        android:textColorHighlight="@android:color/background_dark"
+        android:textCursorDrawable="@android:color/background_dark"
+        android:layout_above="@+id/btLogin"
+        android:layout_alignLeft="@+id/btLogin"
+        android:layout_alignStart="@+id/btLogin"
+        android:layout_marginBottom="102dp"
+        android:layout_alignRight="@+id/btLogin"
+        android:layout_alignEnd="@+id/btLogin" />
 
     <EditText
         android:layout_width="match_parent"
@@ -103,34 +116,24 @@
         android:textColorHighlight="@android:color/background_dark"
         android:freezesText="true"
         android:layout_above="@+id/etLoginPassword"
-        android:layout_alignLeft="@+id/btLogin"
-        android:layout_alignStart="@+id/btLogin"
-        android:layout_alignRight="@+id/btLogin"
-        android:layout_alignEnd="@+id/btLogin" />
+        android:layout_alignLeft="@+id/etLoginPassword"
+        android:layout_alignStart="@+id/etLoginPassword"
+        android:layout_alignRight="@+id/etLoginPassword"
+        android:layout_alignEnd="@+id/etLoginPassword" />
 
-    <EditText
-        android:layout_width="match_parent"
+    <TextView
+        android:text="SaveMe !"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/etLoginPassword"
-        android:hint="@string/stLoginPasswordHint"
-        android:drawableLeft="@drawable/password"
-        android:drawablePadding="40dp"
-        android:layout_gravity="center_horizontal"
-        android:padding="10dp"
-        android:fontFamily="casual"
-        android:textSize="20sp"
-        android:textColor="@android:color/background_dark"
-        android:textColorHint="@android:color/background_dark"
-        android:background="@color/editTextLoginBackground"
-        android:textColorLink="?attr/actionMenuTextColor"
-        android:textColorHighlight="@android:color/background_dark"
-        android:textCursorDrawable="@android:color/background_dark"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/etLoginMail"
-        android:layout_alignStart="@+id/etLoginMail"
-        android:layout_alignRight="@+id/etLoginMail"
-        android:layout_alignEnd="@+id/etLoginMail" />
+        android:id="@+id/tvLogo"
+        android:textSize="50sp"
+        android:fontFamily="cursive"
+        android:textColor="@color/loginButton"
+        android:textAlignment="center"
+        android:paddingTop="40dp"
+        android:layout_marginBottom="12dp"
+        android:layout_above="@+id/etLoginMail"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
