--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,38 +17,71 @@
         android:layout_height="wrap_content"
         android:id="@+id/btLoginCreateAccount"
         android:text="@string/stLoginCreateAccount"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
         android:padding="10dp"
         android:background="#00000000"
         android:fontFamily="casual"
-        android:textSize="10sp"
-        android:textColor="@android:color/black"
+        android:textSize="8sp"
+        android:textColor="@android:color/background_light"
         android:gravity="bottom|center_vertical|center_horizontal"
         android:textColorLink="?attr/actionMenuTextColor"
-        android:textStyle="normal|bold" />
+        android:textStyle="normal|bold"
+        android:layout_alignParentBottom="true"/>
 
-    <Button
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btLogin"
-        android:text="@string/stLogin"
+        android:layout_gravity="center_horizontal"
+        android:layout_above="@+id/sign_in_button"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"></com.facebook.login.widget.LoginButton>
+
+    <TextView
+        android:text="@string/stLoginOr"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:textColor="@android:color/background_light"
+        android:textAlignment="center"
+        android:layout_above="@+id/login_button"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="15dp" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/etLoginPassword"
+        android:hint="@string/stLoginPasswordHint"
+        android:drawableLeft="@drawable/password"
+        android:drawablePadding="40dp"
         android:layout_gravity="center_horizontal"
         android:padding="10dp"
-        android:background="@color/loginButton"
-        android:textSize="20sp"
         android:fontFamily="casual"
-        android:layout_above="@+id/btLoginForgotPassword"
-        android:layout_alignRight="@+id/btLoginCreateAccount"
-        android:layout_alignEnd="@+id/btLoginCreateAccount"
-        android:layout_alignLeft="@+id/btLoginCreateAccount"
-        android:layout_alignStart="@+id/btLoginCreateAccount"
+        android:textSize="20sp"
         android:textColor="@android:color/background_dark"
-        android:textStyle="normal|bold"
-        android:textColorLink="?attr/actionMenuTextColor" />
+        android:textColorHint="@android:color/background_dark"
+        android:background="@color/editTextLoginBackground"
+        android:textColorLink="?attr/actionMenuTextColor"
+        android:textColorHighlight="@android:color/background_dark"
+        android:textCursorDrawable="@android:color/background_dark"
+        android:layout_above="@+id/btLogin"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/btLoginCreateAccount"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="28dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="match_parent"
@@ -57,21 +90,20 @@
         android:text="@string/stLoginForgotPassword"
         android:fontFamily="casual"
         android:layout_gravity="center_horizontal"
-        android:padding="10dp"
+        android:padding="5dp"
         android:background="#00000000"
-        android:textSize="10sp"
+        android:textSize="8sp"
         android:textColor="@android:color/background_light"
         android:gravity="top|center_vertical|center_horizontal"
-        android:layout_above="@+id/btLoginCreateAccount"
-        android:layout_alignLeft="@+id/btLoginCreateAccount"
-        android:layout_alignStart="@+id/btLoginCreateAccount"
-        android:layout_alignRight="@+id/btLoginCreateAccount"
-        android:layout_alignEnd="@+id/btLoginCreateAccount"
         android:textColorLink="?attr/colorControlNormal"
-        android:textStyle="normal|bold" />
+        android:textStyle="normal|bold"
+        android:layout_marginBottom="46dp"
+        android:layout_above="@+id/textView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
-        android:text="SaveMe !"
+        android:text="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvLogo"
@@ -79,9 +111,26 @@
         android:fontFamily="cursive"
         android:textColor="@color/loginButton"
         android:textAlignment="center"
-        android:paddingTop="40dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_above="@+id/etLoginMail"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="64dp" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btLogin"
+        android:text="@string/stLogin"
+        android:layout_gravity="center_horizontal"
+        android:padding="5dp"
+        android:background="@color/loginButton"
+        android:textSize="15sp"
+        android:fontFamily="casual"
+        android:textColor="@android:color/background_dark"
+        android:textStyle="normal|bold"
+        android:textColorLink="?attr/actionMenuTextColor"
+        android:layout_above="@+id/btLoginForgotPassword"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="match_parent"
@@ -103,34 +152,6 @@
         android:textColorHighlight="@android:color/background_dark"
         android:freezesText="true"
         android:layout_above="@+id/etLoginPassword"
-        android:layout_alignLeft="@+id/btLogin"
-        android:layout_alignStart="@+id/btLogin"
-        android:layout_alignRight="@+id/btLogin"
-        android:layout_alignEnd="@+id/btLogin" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/etLoginPassword"
-        android:hint="@string/stLoginPasswordHint"
-        android:drawableLeft="@drawable/password"
-        android:drawablePadding="40dp"
-        android:layout_gravity="center_horizontal"
-        android:padding="10dp"
-        android:fontFamily="casual"
-        android:textSize="20sp"
-        android:textColor="@android:color/background_dark"
-        android:textColorHint="@android:color/background_dark"
-        android:background="@color/editTextLoginBackground"
-        android:textColorLink="?attr/actionMenuTextColor"
-        android:textColorHighlight="@android:color/background_dark"
-        android:textCursorDrawable="@android:color/background_dark"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/etLoginMail"
-        android:layout_alignStart="@+id/etLoginMail"
-        android:layout_alignRight="@+id/etLoginMail"
-        android:layout_alignEnd="@+id/etLoginMail" />
-
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
