--- a/app/src/main/res/layout/activity_first_aid_kit.xml
+++ b/app/src/main/res/layout/activity_first_aid_kit.xml
@@ -5,7 +5,6 @@
         <ListView
             android:id="@+id/listView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:entries="@array/sports_array" />
+            android:layout_height="wrap_content" />
 
 </LinearLayout>
